--- a/style.css
+++ b/style.css
@@ -1,20 +1,26 @@
 * {
     margin: 0;
     padding: 0;
+    color: white;
 }
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-image: url(../photos/pexels-etha-128234.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 /* header */
 header {
-    background-color: #1f2937;
+    background-color: #1f2937b7;
     padding: 20px 150px;
     padding-bottom: 100px;
 }
 /*TOP SECTION */
 #logo {
+    font-weight: bolder;
     font-size: 24px;
-    color: #f9faf8;
+    color: #ffffff;
 }
 
 .top-section {
@@ -32,7 +38,7 @@ header {
 .secondary,
 a:link {
     font-size: 18px;
-    color: #e5e7eb;
+    color: #ffffff;
     text-decoration: none;
 }
 
@@ -43,6 +49,7 @@ a:link {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    color: white;
 }
 
 .intro .right {
@@ -50,20 +57,26 @@ a:link {
 }
 
 .hero {
-    color: #f9faf8;
-    font-weight: bolder;
+    color: #fdfdfd;
     font-size: 48px;
+}
+
+.subtext {
+    color: white;
+    font-size: 24px;
 }
 
 button {
     padding: auto;
     width: 120px;
-    background-color: #3882f6;
+    background-color: #3881f686;
     border-radius: 8px;
+    color: white;
 }
 
 .intro button {
     border: none;
+    background-color: #ff0000;
 }
 
 .image {
@@ -74,4 +87,80 @@ button {
     height: 300px;
     width: 800px;
     margin-top: 100px;
+}
+
+/* MIDDLE SECTION*/
+
+.mid-section {
+    background-color: rgba(12, 56, 12, 0.644);
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+.title {
+    text-align: center;
+    text-decoration: solid underline;
+    font-size: 40px;
+    color: white;
+    text-shadow: 3px 3px 3px black;
+}
+
+.icons {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    align-items: center;
+    gap: 8px;
+    text-shadow: none;
+}
+
+.foodndrinks {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border: 3px red solid;
+    margin: 10px;
+}
+
+h3 {
+    text-decoration: underline solid;
+    color: red;
+}
+
+.icons-detail {
+    text-align: center;
+    color: red;
+    text-shadow: 0 0 1px rgb(255, 0, 0);
+    padding: 20px;
+}
+
+/* QUOTE */
+
+.quote {
+    text-align: center;
+    font-style: italic;
+    font-weight: bolder;
+    text-shadow:  3px 3px 3px black;
+    font-size: 50px;
+    padding: 10px;
+    text-decoration: underline solid;
+
+}
+.last-section {
+    background-color: #1f2937b7;
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+.more-info {
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    font-size: 12px;
+    width: 300px;
+    align-items: center;
+    gap: 10px;
 }
