--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-image: url(../photos/pexels-etha-128234.jpg);
+    background-image: url(photos/pexels-etha-128234.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
